fix(menu): Fixed a z-index problem.

--- a/app/styles/molecules/_intro.scss
+++ b/app/styles/molecules/_intro.scss
@@ -32,7 +32,6 @@
   .intro-bg {
     height          : 150%;
     position        : absolute;
-    z-index         : -1;
     width           : 150%;
   }
 
@@ -47,6 +46,9 @@
   }
 
   .container {
+    position : relative;
+    z-index  : 1;
+
     &.visible .diamond,
     &.visible .title {
       @include opacity(1);
